Implement user-based system - Implemented various actions related to the new user-based way of punishing. - Updated SADU to v2 and migrated all queries accordingly - Put NecrifyUsers into their own table in the db - Updated the paper-extension to MC version 1.20.6 - Bumped JDK to 21 - Added some translations

--- a/plugin-common/src/main/resources/translations/de.properties
+++ b/plugin-common/src/main/resources/translations/de.properties
@@ -28,7 +28,9 @@ command.unmute.not-muted=Der Spieler ist derzeit nicht gemutet.
 command.unmute.multiple-mutes=Dieser Spieler wurde mehrfach bestraft.
 command.whitelist.usage=Bitte nutze /whitelist <Spieler> [add|remove]
 command.whitelist.status=Der Whitelist-Status des Spielers {0} ist folgender: {1}.
-command.whitelist.success=Erfolgreich aktualisiert.
+command.whitelist.success=Der Eintrag wurde erfolgreich aktualisiert.
+command.whitelist.enabled=Die Whitelist wurde aktiviert.
+command.whitelist.disabled=Die Whitelist wurde deaktiviert.
 error.internal=§4Ein interner Fehler ist aufgetreten. Bitte kontaktiere die Netzwerk-Administration.
 helper.type=Typ: 
 helper.reason=Grund: 
@@ -40,5 +42,7 @@ punishment.ban.temp.full-reason=Du wurdest für {0} gebannt.\n\nGrund:\n{1}\n\nEn
 punishment.mute.permanent.full-reason=Du wurdest permanent vom Server gemutet. Grund: {0}
 punishment.mute.temp.full-reason=Du wurdest für {0} gemutet. Grund: {1}. Ende des Mutes: {2}
 prefix=<gray>[<aqua>Bestrafung</aqua>]</gray>
+whitelist.blacklisted=Die Whitelist ist derzeit aktiv. Um zu joinen, kontaktiere bitte das Server-Team, da du nicht auf der Whitelist stehst.
+whitelist.removed=Du wurdest soeben von der Whitelist entfernt. Bitte kontaktiere das Server-Team, um wieder hinzugefügt zu werden.
 whitelist.status.whitelisted=Zugriff erlaubt
 whitelist.status.disallowed=Zugriff verweigert
