--- a/plugin-common/src/main/resources/translations/en.properties
+++ b/plugin-common/src/main/resources/translations/en.properties
@@ -28,6 +28,8 @@ command.unmute.multiple-mutes=This player has been muted multiple times.
 command.whitelist.usage=Please use /whitelist <player> [add|remove]
 command.whitelist.status={0}'s whitelist status: {1}.
 command.whitelist.success=Updated successfully.
+command.whitelist.enabled=The whitelist is now enabled.
+command.whitelist.disabled=The whitelist is now disabled.
 error.internal=<red>An internal error occurred. Please contact the network administration.</red>
 helper.type=Type: 
 helper.reason=reason: 
@@ -39,5 +41,7 @@ punishment.ban.temp.full-reason=You are banned for {0}.\n\nReason:\n{1}\n\nEnd o
 punishment.mute.permanent.full-reason=You have been permanently muted from this server. Reason: {0}
 punishment.mute.temp.full-reason=You are muted for {0}. Reason: {1}. End of punishment: {2}
 prefix=<gray>[<aqua>Punishment</aqua>]</gray>
+whitelist.blacklisted=The whitelist is currently active. To join, please contact the server team since you are currently not whitelisted.
+whitelist.removed=You were removed from the whitelist.
 whitelist.status.whitelisted=access allowed
 whitelist.status.disallowed=access disallowed
