--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -31,7 +31,7 @@ command.whitelist.status=Der Whitelist-Status des Spielers {0} ist folgender: {1
 command.whitelist.success=Der Eintrag wurde erfolgreich aktualisiert.
 command.whitelist.enabled=Die Whitelist wurde aktiviert.
 command.whitelist.disabled=Die Whitelist wurde deaktiviert.
-error.internal=§4Ein interner Fehler ist aufgetreten. Bitte kontaktiere die Netzwerk-Administration.
+error.internal=Ein interner Fehler ist aufgetreten. Bitte kontaktiere die Netzwerk-Administration.
 helper.type=Typ: 
 helper.reason=Grund: 
 helper.temporal.duration=Dauer: 
