--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -11,6 +11,8 @@ command.mute.usage=Please use /mute <player> [reason]
 command.mute.success=You have muted the player {0}/{1} for {2}.
 command.punishment.usage=Please use /punishment <playerinfo> <player> or <cancel|change|info|remove> <punishment id>
 command.punishment.not-banned=This player is not banned at the moment.
+command.punishment.not-muted=This player is not muted at the moment.
+command.punishment.cancel.success=The punishment has been successfully cancelled.
 command.punishment.punishments=This player has {0} punishments.
 command.punishment.uuid-parse-error=Could not parse string '{0}' as uuid.
 command.punishment.unknown-option=Unknown option: {0}
@@ -20,10 +22,10 @@ command.tempban.success=You have banned the player {0}/{1} for {2} until {3}.
 command.tempmute.usage=Please use /tempmute <player> <duration> [reason].
 command.tempmute.success=You have mute the player {0}/{1} for {2} until {3}.
 command.unban.usage=Please use /unban <player>.
-command.unban.multiple-bans=This player has been banned multiple times.
 command.unban.success=The player was unbanned.
+command.unban.multiple-bans=This player has been banned multiple times.
 command.unmute.usage=Please use /unban <player>.
-command.unmute.not-muted=This player is not muted.
+command.unmute.success=The player is no longer muted.
 command.unmute.multiple-mutes=This player has been muted multiple times.
 command.whitelist.usage=Please use /whitelist <player> [add|remove]
 command.whitelist.status={0}'s whitelist status: {1}.
