Fix data consistency and enhance QOL Active punishments are now always available Added some missing translations and enhance messages

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -14,10 +14,11 @@ command.punishment.usage=Bitte benutze /punishment <playerinfo> <Spieler> oder <
 command.punishment.not-banned=Dieser Spieler ist derzeit nicht gebannt.
 command.punishment.not-muted=Dieser Spieler ist derzeit nicht gemutet.
 command.punishment.cancel.success=Die Strafe wurde erfolgreich abgebrochen.
+command.punishment.click-to-remove=Zum Entfernen klicken
 command.punishment.punishments=Dieser Spieler hat derzeit {0} laufende Bestrafungen.
-command.punishment.uuid-parse-error='{0}' ist keine valide UUID.
+command.punishment.uuid-parse-error={0} ist keine valide UUID.
 command.punishment.unknown-option=Unbekannte Option: {0}
-command.punishment.unknown-punishment-id=Es konnte keine Strafe für die ID '{0}' gefunden werden.
+command.punishment.unknown-punishment-id=Es konnte keine Strafe für die ID {0} gefunden werden.
 command.tempban.usage=Bitte benutze /tempban <Spieler> <Dauer> [Grund].
 command.tempban.success=Du hast den Spieler {0}/{1} für {2} bis {3} gebannt.
 command.tempmute.usage=Bitte benutze /tempmute <Spieler> <Dauer> [Grund].
@@ -29,6 +30,7 @@ command.unmute.usage=Bitte benutze /unban <Spieler>.
 command.unmute.success=Der Spieler ist nun nicht mehr gemutet.
 command.unmute.multiple-mutes=Dieser Spieler wurde mehrfach gemutet.
 command.user.delete.success=Der User wurde inklusive all seiner Strafen erfolgreich gelöscht.
+command.user.overview=Der User {0} mit der UUID {1} hat {2} Strafen.
 command.whitelist.usage=Bitte nutze /whitelist <Spieler> [add|remove]
 command.whitelist.status=Der Whitelist-Status des Spielers {0} ist folgender: {1}.
 command.whitelist.success=Der Eintrag wurde erfolgreich aktualisiert.
