--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -13,10 +13,11 @@ command.punishment.usage=Please use /punishment <playerinfo> <player> or <cancel
 command.punishment.not-banned=This player is not banned at the moment.
 command.punishment.not-muted=This player is not muted at the moment.
 command.punishment.cancel.success=The punishment has been successfully cancelled.
+command.punishment.click-to-remove=Click to remove
 command.punishment.punishments=This player has {0} punishments.
-command.punishment.uuid-parse-error=Could not parse string '{0}' as uuid.
+command.punishment.uuid-parse-error=Could not parse string {0} as uuid.
 command.punishment.unknown-option=Unknown option: {0}
-command.punishment.unknown-punishment-id=Could not find a punishment for id '{0}'.
+command.punishment.unknown-punishment-id=Could not find a punishment for id {0}.
 command.tempban.usage=Please use /tempban <player> <duration> [reason].
 command.tempban.success=You have banned the player {0}/{1} for {2} until {3}.
 command.tempmute.usage=Please use /tempmute <player> <duration> [reason].
@@ -27,11 +28,13 @@ command.unban.multiple-bans=This player has been banned multiple times.
 command.unmute.usage=Please use /unban <player>.
 command.unmute.success=The player is no longer muted.
 command.unmute.multiple-mutes=This player has been muted multiple times.
+command.user.overview=User {0} with UUID {1} has {2} punishments.
 command.whitelist.usage=Please use /whitelist <player> [add|remove]
 command.whitelist.status={0}'s whitelist status: {1}.
 command.whitelist.success=Updated successfully.
 command.whitelist.enabled=The whitelist is now enabled.
 command.whitelist.disabled=The whitelist is now disabled.
+command.user.delete.success=The user has been successfully deleted including all of his punishments.
 error.internal=<red>An internal error occurred. Please contact the network administration.</red>
 helper.type=Type: 
 helper.reason=reason: 
