Added translations and error messages Publishing to hangar is now done by Jenkins

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -15,6 +15,7 @@ command.punishment.not-banned=Dieser Spieler ist derzeit nicht gebannt.
 command.punishment.not-muted=Dieser Spieler ist derzeit nicht gemutet.
 command.punishment.cancel.success=Die Strafe wurde erfolgreich abgebrochen.
 command.punishment.click-to-remove=Zum Entfernen klicken
+command.punishment.duration.invalid=Die angegeben Dauer ist ungültig bzw. konnte nicht verarbeitet werden: {0}
 command.punishment.punishments=Dieser Spieler hat derzeit {0} laufende Bestrafungen.
 command.punishment.uuid-parse-error={0} ist keine valide UUID.
 command.punishment.unknown-option=Unbekannte Option: {0}
@@ -41,6 +42,12 @@ helper.type=Typ:
 helper.reason=Grund: 
 helper.temporal.duration=Dauer: 
 helper.temporal.end=Ende: 
+suggestion.correct=Korrekte
+suggestion.incorrect=Fehlerhaft
+suggestion.invalid-duration=Ungültige Dauer:
+suggestion.hover-over-me=mit der Maus über mich fahren
+suggestion.select-player=Der Spieler {0}, der als Ziel ausgewählt werden soll. 
+suggestion.until=bis
 punishment.remove=Die Strafe wurde entfernt.
 punishment.ban.permanent.full-reason=Du wurdest permanent vom Server verbannt.\n\nGrund:\n{0}
 punishment.ban.temp.full-reason=Du wurdest für {0} gebannt.\n\nGrund:\n{1}\n\nEnde des Banns: {2}
