--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -14,6 +14,7 @@ command.punishment.not-banned=This player is not banned at the moment.
 command.punishment.not-muted=This player is not muted at the moment.
 command.punishment.cancel.success=The punishment has been successfully cancelled.
 command.punishment.click-to-remove=Click to remove
+command.punishment.duration.invalid=The specified duration is invalid or could not be processed: {0}
 command.punishment.punishments=This player has {0} punishments.
 command.punishment.uuid-parse-error=Could not parse string {0} as uuid.
 command.punishment.unknown-option=Unknown option: {0}
@@ -40,6 +41,12 @@ helper.type=Type:
 helper.reason=reason: 
 helper.temporal.duration=duration: 
 helper.temporal.end=end of punishment: 
+suggestion.correct=correct
+suggestion.incorrect=incorrect
+suggestion.invalid-duration=Invalid duration:
+suggestion.hover-over-me=hover over me
+suggestion.select-player=Select the player {0} as target.
+suggestion.until=until
 punishment.remove=The punishment has been successfully removed.
 punishment.ban.permanent.full-reason=You have been permanently banned from this server.\n\nReason:\n{0}
 punishment.ban.temp.full-reason=You are banned for {0}.\n\nReason:\n{1}\n\nEnd of punishment: {2}
