Implement user deletion Migrate legacy-serialized reasons to minimessage format

--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -35,7 +35,7 @@ command.whitelist.status={0}'s whitelist status: {1}.
 command.whitelist.success=Updated successfully.
 command.whitelist.enabled=The whitelist is now enabled.
 command.whitelist.disabled=The whitelist is now disabled.
-command.user.delete.success=The user has been successfully deleted including all of his punishments.
+command.user.delete.success=The user has been successfully deleted including all of his punishments. This affected {0} records. This operation cannot be undone.
 error.internal=<red>An internal error occurred. Please contact the network administration.</red>
 helper.type=Type: 
 helper.reason=reason: 
