--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -30,7 +30,7 @@ command.unban.multiple-bans=Dieser Spieler wurde mehrfach gebannt.
 command.unmute.usage=Bitte benutze /unban <Spieler>.
 command.unmute.success=Der Spieler ist nun nicht mehr gemutet.
 command.unmute.multiple-mutes=Dieser Spieler wurde mehrfach gemutet.
-command.user.delete.success=Der User wurde inklusive all seiner Strafen erfolgreich gelöscht.
+command.user.delete.success=Der User wurde inklusive all seiner Strafen erfolgreich gelöscht. Dies betraf {0} Datensätze. Dieser Vorgang kann nicht mehr rückgängig gemacht werden.
 command.user.overview=Der User {0} mit der UUID {1} hat {2} Strafen.
 command.whitelist.usage=Bitte nutze /whitelist <Spieler> [add|remove]
 command.whitelist.status=Der Whitelist-Status des Spielers {0} ist folgender: {1}.
