Add whitelist commands

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -4,6 +4,7 @@ locale=de_DE
 commands.general.not-found=Der Spieler {0} konnte nicht gefunden werden.
 commands.general.punishment.id=ID der Strafe: {0}
 commands.general.copy=Zum Kopieren klicken
+commands.general.unknown-option=Unbekannte Option: {0}. Erlaubt sind: {1}
 command.ban.usage=Bitte benutze /ban <Spieler> [Grund]
 command.ban.success=Du hast den Spieler {0}/{1} für {2} gebannt.
 command.kick.usage=Bitte benutze /kick <Spieler> [Grund]
@@ -34,9 +35,11 @@ command.user.delete.success=Der User wurde inklusive all seiner Strafen erfolgre
 command.user.overview=Der User {0} mit der UUID {1} hat {2} Strafen.
 command.whitelist.usage=Bitte nutze /whitelist <Spieler> [add|remove]
 command.whitelist.status=Der Whitelist-Status des Spielers {0} ist folgender: {1}.
-command.whitelist.success=Der Eintrag wurde erfolgreich aktualisiert.
+command.whitelist.success=Der Eintrag des Spielers wurde erfolgreich aktualisiert.
 command.whitelist.enabled=Die Whitelist wurde aktiviert.
 command.whitelist.disabled=Die Whitelist wurde deaktiviert.
+command.whitelist.active=Die Whitelist ist derzeit aktiv.
+command.whitelist.inactive=Die Whitelist ist derzeit inaktiv.
 error.internal=Ein interner Fehler ist aufgetreten. Bitte kontaktiere die Netzwerk-Administration.
 helper.type=Typ: 
 helper.reason=Grund: 
