--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -33,6 +33,8 @@ command.user.overview=User {0} with UUID {1} has {2} punishments.
 command.whitelist.usage=Please use /whitelist <player> [add|remove]
 command.whitelist.status={0}'s whitelist status: {1}.
 command.whitelist.success=Updated successfully.
+command.whitelist.active=The whitelist is currently active.
+command.whitelist.inactive=The whitelist is currently inactive.
 command.whitelist.enabled=The whitelist is now enabled.
 command.whitelist.disabled=The whitelist is now disabled.
 command.user.delete.success=The user has been successfully deleted including all of his punishments. This affected {0} records. This operation cannot be undone.
