Add automatic question whether to chain punishments when needed, also display all reasons when longest punishment gets preceded.

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -11,6 +11,12 @@ command.kick.usage=Bitte benutze /kick <Spieler> [Grund]
 command.kick.success=Der Spieler {0} wurde für {1} vom Server gekickt.
 command.mute.usage=Bitte benutze /mute <Spieler> [Grund]
 command.mute.success=Du hast Spieler {0}/{1} für {2} gemutet.
+command.punishment.chain.info=Der Spieler wurde bereits mit einer Strafe der selben Art belegt. Da diese nun parallel ablaufen würden, wäre eine effektiv sinnlos. Du kannst jedoch einer der bestehenden Strafen diese neue als Nachfolger hinzufügen, sodass die Dauer addiert wird und die neue erst beginnt, wenn die vorhergie abgelaufen ist. 
+command.punishment.chain=Klicke hier, um der Strafe {0} die neu von dir erstellte als Nachfolger hinzuzufügen.
+command.punishment.chain.unrelated-types=Die Strafen sind nicht miteinander kompatibel.
+command.punishment.chain.user-mismatch=Die die Strafe betreffenden User sind unterschiedlich, weswegen eine Verkettung nicht möglich ist.
+command.punishment.circular-chain=Beim Verketten dieser Strafen entstünde eine Schleife, was nicht möglich ist.
+command.punishment.chain.success=Die Strafe wurde erfolgreich verknüpft.
 command.punishment.usage=Bitte benutze /punishment <playerinfo> <Spieler> oder <cancel|change|info|remove> <ID der Strafe>
 command.punishment.not-banned=Dieser Spieler ist derzeit nicht gebannt.
 command.punishment.not-muted=Dieser Spieler ist derzeit nicht gemutet.
@@ -32,7 +38,7 @@ command.unmute.usage=Bitte benutze /unban <Spieler>.
 command.unmute.success=Der Spieler ist nun nicht mehr gemutet.
 command.unmute.multiple-mutes=Dieser Spieler wurde mehrfach gemutet.
 command.user.delete.success=Der User wurde inklusive all seiner Strafen erfolgreich gelöscht. Dies betraf {0} Datensätze. Dieser Vorgang kann nicht mehr rückgängig gemacht werden.
-command.user.overview=Der User {0} mit der UUID {1} hat {2} Strafen.
+command.user.overview=Der User {0} mit der UUID {1} hat {2} Strafe(n).
 command.whitelist.usage=Bitte nutze /whitelist <Spieler> [add|remove]
 command.whitelist.status=Der Whitelist-Status des Spielers {0} ist folgender: {1}.
 command.whitelist.success=Der Eintrag des Spielers wurde erfolgreich aktualisiert.
@@ -45,6 +51,7 @@ helper.type=Typ:
 helper.reason=Grund: 
 helper.temporal.duration=Dauer: 
 helper.temporal.end=Ende: 
+helper.successor=Nach Beendigung dieser Strafe folgt die folgende:
 suggestion.correct=Korrekte
 suggestion.incorrect=Fehlerhaft
 suggestion.invalid-duration=Ungültige Dauer:
