--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -9,13 +9,19 @@ command.kick.usage=Please use /kick <player> [reason]
 command.kick.success=The player {0} was kicked off the server for {1}.
 command.mute.usage=Please use /mute <player> [reason]
 command.mute.success=You have muted the player {0}/{1} for {2}.
+command.punishment.chain.info=The player has already been punished with a punishment of the same type. Since these would now run in parallel, it would be effectively pointless. However, you can add this new punishment as a successor to one of the existing ones, so that the duration is added and the new one only starts when the previous one has expired.
+command.punishment.chain=Click here to add the newly created punishment as a successor to punishment {0}.
+command.punishment.chain.unrelated-types=The punishments are not compatible with each other.
+command.punishment.chain.user-mismatch=The users affected by the punishment are different, so chaining is not possible.
+command.punishment.circular-chain=Chaining these punishments would create a loop, which is not possible.
+command.punishment.chain.success=The punishment has been successfully linked.
 command.punishment.usage=Please use /punishment <playerinfo> <player> or <cancel|change|info|remove> <punishment id>
 command.punishment.not-banned=This player is not banned at the moment.
 command.punishment.not-muted=This player is not muted at the moment.
 command.punishment.cancel.success=The punishment has been successfully cancelled.
 command.punishment.click-to-remove=Click to remove
 command.punishment.duration.invalid=The specified duration is invalid or could not be processed: {0}
-command.punishment.punishments=This player has {0} punishments.
+command.punishment.punishments=This player has {0} punishment(s).
 command.punishment.uuid-parse-error=Could not parse string {0} as uuid.
 command.punishment.unknown-option=Unknown option: {0}
 command.punishment.unknown-punishment-id=Could not find a punishment for id {0}.
@@ -41,6 +47,7 @@ command.user.delete.success=The user has been successfully deleted including all
 error.internal=<red>An internal error occurred. Please contact the network administration.</red>
 helper.type=Type: 
 helper.reason=reason: 
+helper.successor=After this punishment ends, the next one will begin:
 helper.temporal.duration=duration: 
 helper.temporal.end=end of punishment: 
 suggestion.correct=correct
