Remove ability to en/disable whitelist directly via command. Instead, the whitelist's state must be changed in the config file, thereafter you can reload the config through /necrify reload

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -27,6 +27,9 @@ command.punishment.punishments=Dieser Spieler hat derzeit {0} laufende Bestrafun
 command.punishment.uuid-parse-error={0} ist keine valide UUID.
 command.punishment.unknown-option=Unbekannte Option: {0}
 command.punishment.unknown-punishment-id=Es konnte keine Strafe für die ID {0} gefunden werden.
+command.reload.start=Die Konfiguration wird neu geladen. Hierdurch wird nicht die Datenbank-Verbindung neugestartet. Bitte starte den Server dazu neu!
+command.reload.success=Die Konfiguration wurde erfolgreich in {0}s neu geladen.
+command.reload.failure=Beim Neuladen der Konfiguration ist ein Fehler aufgetreten. Bitte überprüfe die Konsole.
 command.tempban.usage=Bitte benutze /tempban <Spieler> <Dauer> [Grund].
 command.tempban.success=Du hast den Spieler {0}/{1} für {2} bis {3} gebannt.
 command.tempmute.usage=Bitte benutze /tempmute <Spieler> <Dauer> [Grund].
@@ -66,5 +69,6 @@ punishment.mute.temp.full-reason=Du wurdest für {0} gemutet. Grund: {1}. Ende de
 prefix=<gray>[<aqua>Bestrafung</aqua>]</gray>
 whitelist.blacklisted=Die Whitelist ist derzeit aktiv. Um zu joinen, kontaktiere bitte das Server-Team, da du nicht auf der Whitelist stehst.
 whitelist.removed=Du wurdest soeben von der Whitelist entfernt. Bitte kontaktiere das Server-Team, um wieder hinzugefügt zu werden.
+whitelist.change-in-config=Um die Whitelist zu aktivieren oder deaktivieren, ändere bitte die Konfiguration unter whitelist-activated. Nutze anschließend /necrify reload, um die Änderungen zu übernehmen.
 whitelist.status.whitelisted=Zugriff erlaubt
 whitelist.status.disallowed=Zugriff verweigert
