--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -25,6 +25,9 @@ command.punishment.punishments=This player has {0} punishment(s).
 command.punishment.uuid-parse-error=Could not parse string {0} as uuid.
 command.punishment.unknown-option=Unknown option: {0}
 command.punishment.unknown-punishment-id=Could not find a punishment for id {0}.
+command.reload.start=The configuration is being reloaded. This does not restart the database connection. Please restart the server for that.
+command.reload.success=The configuration has been successfully reloaded in {0}s.
+command.reload.failure=An error occurred while reloading the configuration. Please check the console.
 command.tempban.usage=Please use /tempban <player> <duration> [reason].
 command.tempban.success=You have banned the player {0}/{1} for {2} until {3}.
 command.tempmute.usage=Please use /tempmute <player> <duration> [reason].
@@ -64,5 +67,6 @@ punishment.mute.temp.full-reason=You are muted for {0}. Reason: {1}. End of puni
 prefix=<gray>[<aqua>Punishment</aqua>]</gray>
 whitelist.blacklisted=The whitelist is currently active. To join, please contact the server team since you are currently not whitelisted.
 whitelist.removed=You were removed from the whitelist.
+whitelist.change-in-config=In order to change the whitelist status, change whitelist-activated in the config. Afterwards, use /necrify reload to apply the changes.
 whitelist.status.whitelisted=access allowed
 whitelist.status.disallowed=access disallowed
