Implement punishment logs for Velocity also visually

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -55,6 +55,13 @@ helper.reason=Grund:
 helper.temporal.duration=Dauer: 
 helper.temporal.end=Ende: 
 helper.successor=Nach Beendigung dieser Strafe folgt die folgende:
+log.change-reason=Änderung des Grundes:
+log.change-duration=Änderung der Dauer:
+log.change-successor=Änderung des Nachfolgers:
+log.change-predecessor=Änderung des Vorgängers:
+log.executed-by-on=Änderung durchgeführt von {0} am {1}:
+log.punishment.created=Die Strafe wurde erstellt und ist nun aktiv.
+log.punishment.removed=Die Strafe wurde entfernt.
 suggestion.correct=Korrekte
 suggestion.incorrect=Fehlerhaft
 suggestion.invalid-duration=Ungültige Dauer:
