--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -53,6 +53,13 @@ helper.reason=reason:
 helper.successor=After this punishment ends, the next one will begin:
 helper.temporal.duration=duration: 
 helper.temporal.end=end of punishment: 
+log.change-reason=Change of reason:
+log.change-duration=Change of duration:
+log.change-successor=Change of successor:
+log.change-predecessor=Change of predecessor:
+log.executed-by-on=Change executed by {0} on {1}:
+log.punishment.created=The punishment has been created and is now active.
+log.punishment.removed=The punishment has been removed.
 suggestion.correct=correct
 suggestion.incorrect=incorrect
 suggestion.invalid-duration=Invalid duration:
