Improve messages/information and fix some small bugs regarding logging for successors and correctly removing expired punishments on login

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -55,10 +55,12 @@ helper.reason=Grund:
 helper.temporal.duration=Dauer: 
 helper.temporal.end=Ende: 
 helper.successor=Nach Beendigung dieser Strafe folgt die folgende:
+helper.view-log=Log anzeigen
 log.change-reason=Änderung des Grundes:
 log.change-duration=Änderung der Dauer:
 log.change-successor=Änderung des Nachfolgers:
 log.change-predecessor=Änderung des Vorgängers:
+log.change-time=Änderung der Zeit:
 log.executed-by-on=Änderung durchgeführt von {0} am {1}:
 log.punishment.created=Die Strafe wurde erstellt und ist nun aktiv.
 log.punishment.removed=Die Strafe wurde entfernt.
