Display user.unknown translation when actor is not present MessageProvider#provideString now defaults to unprefixed values

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -76,6 +76,7 @@ punishment.ban.temp.full-reason=Du wurdest für {0} gebannt.\n\nGrund:\n{1}\n\nEn
 punishment.mute.permanent.full-reason=Du wurdest permanent vom Server gemutet. Grund: {0}
 punishment.mute.temp.full-reason=Du wurdest für {0} gemutet. Grund: {1}. Ende des Mutes: {2}
 prefix=<gray>[<aqua>Bestrafung</aqua>]</gray>
+user.unknown=Unbekannter Nutzer
 whitelist.blacklisted=Die Whitelist ist derzeit aktiv. Um zu joinen, kontaktiere bitte das Server-Team, da du nicht auf der Whitelist stehst.
 whitelist.removed=Du wurdest soeben von der Whitelist entfernt. Bitte kontaktiere das Server-Team, um wieder hinzugefügt zu werden.
 whitelist.change-in-config=Um die Whitelist zu aktivieren oder deaktivieren, ändere bitte die Konfiguration unter whitelist-activated. Nutze anschließend /necrify reload, um die Änderungen zu übernehmen.
