--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -74,6 +74,7 @@ punishment.ban.temp.full-reason=You are banned for {0}.\n\nReason:\n{1}\n\nEnd o
 punishment.mute.permanent.full-reason=You have been permanently muted from this server. Reason: {0}
 punishment.mute.temp.full-reason=You are muted for {0}. Reason: {1}. End of punishment: {2}
 prefix=<gray>[<aqua>Punishment</aqua>]</gray>
+user.unknown=Unknown user
 whitelist.blacklisted=The whitelist is currently active. To join, please contact the server team since you are currently not whitelisted.
 whitelist.removed=You were removed from the whitelist.
 whitelist.change-in-config=In order to change the whitelist status, change whitelist-activated in the config. Afterwards, use /necrify reload to apply the changes.
