Display punishment ID after enforcement Replace dual-display of username + UUID with username (or UUID if the former is null) with click option to view full user info

--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -5,12 +5,13 @@ commands.general.not-found=Der Spieler {0} konnte nicht gefunden werden.
 commands.general.punishment.id=ID der Strafe: {0}
 commands.general.copy=Zum Kopieren klicken
 commands.general.unknown-option=Unbekannte Option: {0}. Erlaubt sind: {1}
+commands.general.view-user-info=Klicke hier, um die Informationen des Spielers {0} anzuzeigen.
 command.ban.usage=Bitte benutze /ban <Spieler> [Grund]
-command.ban.success=Du hast den Spieler {0}/{1} für {2} gebannt.
+command.ban.success=Du hast den Spieler {0} für {2} gebannt (ID: {1}).
 command.kick.usage=Bitte benutze /kick <Spieler> [Grund]
 command.kick.success=Der Spieler {0} wurde für {1} vom Server gekickt.
 command.mute.usage=Bitte benutze /mute <Spieler> [Grund]
-command.mute.success=Du hast Spieler {0}/{1} für {2} gemutet.
+command.mute.success=Du hast den Spieler {0} für {2} gemutet (ID: {1}).
 command.punishment.chain.info=Der Spieler wurde bereits mit einer Strafe derselben Art belegt. Da diese nun parallel ablaufen würden, wäre eine effektiv sinnlos. Du kannst jedoch einer der bestehenden Strafen diese neue als Nachfolger hinzufügen, sodass die Dauer addiert wird und die neue erst beginnt, wenn die vorhergie abgelaufen ist. 
 command.punishment.chain=Klicke hier, um der Strafe {0} die neu von dir erstellte als Nachfolger hinzuzufügen.
 command.punishment.chain.unrelated-types=Die Strafen sind nicht miteinander kompatibel.
@@ -31,9 +32,9 @@ command.reload.start=Die Konfiguration wird neu geladen. Hierdurch wird nicht di
 command.reload.success=Die Konfiguration wurde erfolgreich in {0}s neu geladen.
 command.reload.failure=Beim Neuladen der Konfiguration ist ein Fehler aufgetreten. Bitte überprüfe die Konsole.
 command.tempban.usage=Bitte benutze /tempban <Spieler> <Dauer> [Grund].
-command.tempban.success=Du hast den Spieler {0}/{1} für {2} bis {3} gebannt.
+command.tempban.success=Du hast den Spieler {0} für {2} bis {3} gebannt (ID: {1}).
 command.tempmute.usage=Bitte benutze /tempmute <Spieler> <Dauer> [Grund].
-command.tempmute.success=Du hast den Spieler {0}/{1} für {2} bis {3} gemutet.
+command.tempmute.success=Du hast den Spieler {0} für {2} bis {3} gemutet (ID: {1}).
 command.unban.usage=Bitte benutze /unban <Spieler>.
 command.unban.success=Der Spieler wurde entbannt.
 command.unban.multiple-bans=Dieser Spieler wurde mehrfach gebannt.
