--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -3,12 +3,13 @@ locale=en_US
 commands.general.not-found=The player {0} could not be found.
 commands.general.punishment.id=Punishment ID: {0}
 commands.general.copy=Click to copy
+commands.general.view-user-info=Click here to view the information of player {0}.
 command.ban.usage=Please use /ban <player> [reason]
-command.ban.success=You have banned the player {0}/{1} for {2}.
+command.ban.success=You have banned the player {0} for {2} (ID: {1}).
 command.kick.usage=Please use /kick <player> [reason]
 command.kick.success=The player {0} was kicked off the server for {1}.
 command.mute.usage=Please use /mute <player> [reason]
-command.mute.success=You have muted the player {0}/{1} for {2}.
+command.mute.success=You have muted the player {0} for {2} (ID: {1}).
 command.punishment.chain.info=The player has already been punished with a punishment of the same type. Since these would now run in parallel, it would be effectively pointless. However, you can add this new punishment as a successor to one of the existing ones, so that the duration is added and the new one only starts when the previous one has expired.
 command.punishment.chain=Click here to add the newly created punishment as a successor to punishment {0}.
 command.punishment.chain.unrelated-types=The punishments are not compatible with each other.
@@ -29,9 +30,9 @@ command.reload.start=The configuration is being reloaded. This does not restart 
 command.reload.success=The configuration has been successfully reloaded in {0}s.
 command.reload.failure=An error occurred while reloading the configuration. Please check the console.
 command.tempban.usage=Please use /tempban <player> <duration> [reason].
-command.tempban.success=You have banned the player {0}/{1} for {2} until {3}.
+command.tempban.success=You have banned the player {0} for {2} until {3} (ID: {1}).
 command.tempmute.usage=Please use /tempmute <player> <duration> [reason].
-command.tempmute.success=You have mute the player {0}/{1} for {2} until {3}.
+command.tempmute.success=You have mute the player {0} for {2} until {3}  (ID: {1}).
 command.unban.usage=Please use /unban <player>.
 command.unban.success=The player was unbanned.
 command.unban.multiple-bans=This player has been banned multiple times.
