[skip ci] add documentation page

--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -1,3 +1,4 @@
+# suppress inspection "GrazieInspection" for whole file
 # suppress inspection "TrailingSpacesInProperty" for whole file
 locale=en_US
 commands.general.not-found=The player {0} could not be found.
@@ -41,7 +42,7 @@ command.unmute.success=The player is no longer muted.
 command.unmute.multiple-mutes=This player has been muted multiple times.
 command.user.overview=User {0} with UUID {1} has {2} punishments.
 command.whitelist.usage=Please use /whitelist <player> [add|remove]
-command.whitelist.status={0}'s whitelist status: {1}.
+command.whitelist.status=The whitelist status of {0} is: {1}.
 command.whitelist.success=Updated successfully.
 command.whitelist.active=The whitelist is currently active.
 command.whitelist.inactive=The whitelist is currently inactive.
@@ -74,7 +75,6 @@ punishment.ban.permanent.full-reason=You have been permanently banned from this 
 punishment.ban.temp.full-reason=You are banned for {0}.\n\nReason:\n{1}\n\nEnd of punishment: {2}
 punishment.mute.permanent.full-reason=You have been permanently muted from this server. Reason: {0}
 punishment.mute.temp.full-reason=You are muted for {0}. Reason: {1}. End of punishment: {2}
-prefix=<gray>[<aqua>Punishment</aqua>]</gray>
 user.unknown=Unknown user
 whitelist.blacklisted=The whitelist is currently active. To join, please contact the server team since you are currently not whitelisted.
 whitelist.removed=You were removed from the whitelist.
