Add amnesty + stage feature for templates

--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -32,6 +32,10 @@ command.reload.success=The configuration has been successfully reloaded in {0}s.
 command.reload.failure=An error occurred while reloading the configuration. Please check the console.
 command.tempban.usage=Please use /tempban <player> <duration> [reason].
 command.tempban.success=You have banned the player {0} for {2} until {3} (ID: {1}).
+command.template.apply.success={1} was applied to {0} using template {4} due to {2} for a duration of {3} (ID: {5}) 
+command.template.amnesty.success=The user has received amnesty regarding the given template.
+command.template.state.no-stage=This template has not yet been applied to this user.
+command.template.state.text=The template {1} has already been applied to {0} in stage {2}. Next time it will be stage {3}.
 command.template.not-found=There exists no template for input string {0}.
 command.template.create.already-exists=A template with the given name already exists. Please choose another name!
 command.template.create.success=Template {0} was created successfully.
