--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -33,6 +33,18 @@ command.reload.success=Die Konfiguration wurde erfolgreich in {0}s neu geladen.
 command.reload.failure=Beim Neuladen der Konfiguration ist ein Fehler aufgetreten. Bitte überprüfe die Konsole.
 command.tempban.usage=Bitte benutze /tempban <Spieler> <Dauer> [Grund].
 command.tempban.success=Du hast den Spieler {0} für {2} bis {3} gebannt (ID: {1}).
+command.template.apply.success=Der Spieler {0} wurde in Form von {1} aufgrund von {2} für {3} durch die Vorlage {4} bestraft (ID: {5}). 
+command.template.amnesty.success=Der Spieler wurde bezüglich der angegebenen Vorlage amnestiert.
+command.template.not-found=Es gibt keine Vorlage namens {0}.
+command.template.state.no-stage=Diese Vorlage wurde noch nicht auf diesen Nutzer angewendet.
+command.template.state.text=Die Vorlage {1} wurde auf {0} bereits in Stufe {2} angewendet. Es folgt nächstes mal Stufe {3}.
+command.template.create.already-exists=Eine Vorlage mit demselben Namen existiert bereits. Wähle bitte einen anderen Namen!
+command.template.create.success=Die Vorlage {0} wurde erfolgreich erstellt.
+command.template.manage.info=Die Vorlage {0} enthält die folgenden {1} Stufen:
+command.template.stage.info={0}: Die Stufe wendet {3} aufgrund von {1} für eine Dauer von {2} an.
+command.template.delete.success=Die Vorlage {0} wurde erfolgreich gelöscht ({1} Datensätze).
+command.template.stage.add.success=Die Stufe wurde erfolgreich hinzugefügt.
+command.template.stage.remove.success=Die Stufe wurde erfolgreich entfernt.
 command.tempmute.usage=Bitte benutze /tempmute <Spieler> <Dauer> [Grund].
 command.tempmute.success=Du hast den Spieler {0} für {2} bis {3} gemutet (ID: {1}).
 command.unban.usage=Bitte benutze /unban <Spieler>.
