--- a/necrify-common/src/main/resources/translations/en.properties
+++ b/necrify-common/src/main/resources/translations/en.properties
@@ -7,6 +7,11 @@ commands.general.copy=Click to copy
 commands.general.view-user-info=Click here to view the information of player {0}.
 command.ban.usage=Please use /ban <player> [reason]
 command.ban.success=You have banned the player {0} for {2} (ID: {1}).
+command.info.version.snapshot=This system is running Necrify on version {0} Build {1} (Last commit ID: {2}).
+command.info.version.release=This system is running Necrify on version {0} (Last commit ID: {1}).
+command.info.download-updates=Updates can be downloaded through {0}, {1} and {2} (mostly development builds).
+command.info.view-source=Click to view source code
+command.info.documentation=Click to view documentation
 command.kick.usage=Please use /kick <player> [reason]
 command.kick.success=The player {0} was kicked off the server for {1}.
 command.mute.usage=Please use /mute <player> [reason]
