--- a/necrify-common/src/main/resources/translations/de.properties
+++ b/necrify-common/src/main/resources/translations/de.properties
@@ -8,6 +8,11 @@ commands.general.unknown-option=Unbekannte Option: {0}. Erlaubt sind: {1}
 commands.general.view-user-info=Klicke hier, um die Informationen des Spielers {0} anzuzeigen.
 command.ban.usage=Bitte benutze /ban <Spieler> [Grund]
 command.ban.success=Du hast den Spieler {0} für {2} gebannt (ID: {1}).
+command.info.version.snapshot=Dieses System nutzt Necrify, Version {0} Build {1} (Letzte commit ID: {2}).
+command.info.version.release=Dieses System nutzt Necrify, Version {0} (Letzte commit ID: {1}).
+command.info.download-updates=Updates können unter {0}, {1} und {2} (überwiegend im Entwicklungs-Stadium) heruntergeladen werden.
+command.info.view-source=Klick hier, um den Quellcode einzusehen
+command.info.documentation=Klicke hier, um zur Dokumentation zu gelangen (nur auf Englisch verfügbar).
 command.kick.usage=Bitte benutze /kick <Spieler> [Grund]
 command.kick.success=Der Spieler {0} wurde für {1} vom Server gekickt.
 command.mute.usage=Bitte benutze /mute <Spieler> [Grund]
